// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom FIX version 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 8,
      "type": null,
      "value": "FIX.4.3",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIX.4.3",
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
  "messageTypeDescription": "",
  "structure": null,
}
`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom FIX version 2`] = `"8=FIX.4.39=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=135"`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom Fields.BodyLength 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 9,
      "type": null,
      "value": 123456,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIXT.1.1",
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
  "messageTypeDescription": "",
  "structure": null,
}
`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom Fields.BodyLength 2`] = `"8=FIXT.1.19=12345635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=158"`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom Fields.CheckSum 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 10,
      "type": null,
      "value": 999,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIXT.1.1",
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
  "messageTypeDescription": "",
  "structure": null,
}
`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom Fields.CheckSum 2`] = `"8=FIXT.1.19=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=999"`;

exports[`FIXEncoder #encode: Heartbeat should have encoded the FIX message 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "value": "0",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "value": 703,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "value": "20100130-10:53:40.830",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "value": "XYZ",
    },
  ],
  "description": "",
  "fixVersion": "FIXT.1.1",
  "messageSequence": 703,
  "messageString": "",
  "messageType": "",
  "messageTypeDescription": "",
  "structure": null,
}
`;

exports[`FIXEncoder #encode: Heartbeat should have encoded the FIX message 2`] = `"8=FIXT.1.19=5135=034=70349=ABC52=20100130-10:53:40.83056=XYZ10=073"`;

exports[`FIXEncoder #encode: Logon should have encoded the FIX message 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIXT.1.1",
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
  "messageTypeDescription": "",
  "structure": null,
}
`;

exports[`FIXEncoder #encode: Logon should have encoded the FIX message 2`] = `"8=FIXT.1.19=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=214"`;

exports[`FIXEncoder #encode: Multiple encode should have encoded the FIX message 1 1`] = `"8=FIX.4.3|9=76|35=A|34=702|49=ABC|52=20100130-10:52:40.663|56=XYZ|95=4|96=1234|98=0|108=60|10=135|"`;

exports[`FIXEncoder #encode: Multiple encode should have encoded the FIX message 1 2`] = `"8=FIX.4.39=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=135"`;

exports[`FIXEncoder #encode: Multiple encode should have encoded the FIX message 2 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIXT.1.1",
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
  "messageTypeDescription": "",
  "structure": null,
}
`;

exports[`FIXEncoder #encode: Multiple encode should have encoded the FIX message 2 2`] = `"8=FIXT.1.19=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=214"`;

exports[`FIXEncoder #encode: tag ordering should have encoded the FIX message in correct order 1 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "value": "1",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "value": 1,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 112,
      "type": null,
      "value": "reqId",
    },
  ],
  "description": "",
  "fixVersion": "FIXT.1.1",
  "messageSequence": 1,
  "messageString": "",
  "messageType": "",
  "messageTypeDescription": "",
  "structure": null,
}
`;

exports[`FIXEncoder #encode: tag ordering should have encoded the FIX message in correct order 2 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "value": "1",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "value": 1,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 112,
      "type": null,
      "value": "reqId",
    },
  ],
  "description": "",
  "fixVersion": "FIXT.1.1",
  "messageSequence": 1,
  "messageString": "",
  "messageType": "",
  "messageTypeDescription": "",
  "structure": null,
}
`;
